--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,6 +2,8 @@ name: Generate Flags
 
 on:
   push:
+    paths:
+      - svg/**
   workflow_dispatch:
 
 jobs:
@@ -20,10 +22,10 @@ jobs:
 
       - name: Install dependencies
         run: yarn --immutable
-      
+
       - name: Generate PNGs and WEBPs
         run: yarn generate
-      
+
       - name: Check for changes
         shell: pwsh
         id: check_for_changes
@@ -39,5 +41,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.commit
           git add *.png *.webp
-          git commit -m "[auto commit] Generate PNGs and WEBPs"
+          git commit -m "chore: Generate PNGs and WEBPs"
           git push
