--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "svg2png": "^4.1.1"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.1.2",
+        "@commitlint/config-conventional": "^17.1.0",
         "eslint": "^8.26.0",
         "eslint-config-apteryx": "^1.0.6",
         "eslint-config-prettier": "^8.5.0",
@@ -40,6 +42,31 @@
         "prettier-config-apteryx": "^1.0.0",
         "pretty-quick": "^3.1.3",
         "rimraf": "^3.0.2"
+    },
+    "commitlint": {
+        "extends": [
+            "@commitlint/config-conventional"
+        ],
+        "rules": {
+            "type-enum": [
+                2,
+                "always",
+                [
+                    "build",
+                    "chore",
+                    "ci",
+                    "docs",
+                    "feat",
+                    "fix",
+                    "perf",
+                    "refactor",
+                    "revert",
+                    "style",
+                    "test",
+                    "types"
+                ]
+            ]
+        }
     },
     "prettier": "prettier-config-apteryx",
     "eslintConfig": {
