chore: fix lint-staged

--- a/package.json
+++ b/package.json
@@ -87,6 +87,6 @@
         }
     },
     "lint-staged": {
-        "**/*.js": "eslint src --fix"
+        "**/*.js": "eslint **/*.js --fix"
     }
 }
